--- a/styles/base.css
+++ b/styles/base.css
@@ -9,6 +9,7 @@ body {
     margin: auto;
     background-color: #F6FCFF;
     min-width: 350px;
+    max-width: 400px;
     width: fit-content;
     padding: 25px;
     border-radius: 20px;
@@ -40,6 +41,13 @@ body {
     font-size: 1rem;
     font-weight: 400;
     padding: 4px 0;
+}
+#errormsg{
+    text-align: center;
+    font-weight: 400;
+    font-size: 0.9rem;
+    margin: 10px auto;
+    color: red;
 }
 
 button {
